# uzdoom-wasm

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CREDITS.md  Caddyfile  Dockerfile  README.md  build-wasm.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: continuous_integration.yml  docker-publish.yml
cmake/: Emscripten.overrides.cmake
libraries/libvpx-stub/: CMakeLists.txt
libraries/libvpx-stub/src/: vpx_stub.c
libraries/libvpx-stub/vpx/: vp8dx.h  vpx_codec.h  vpx_decoder.h  vpx_image.h
libraries/zmusic-stub/: CMakeLists.txt
libraries/zmusic-stub/src/: stb_vorbis_impl.c  tsf_impl.c  zmusic_stub.cpp
src/: CMakeLists.txt  d_iwad.cpp  d_main.cpp  g_game.cpp  gameconfigfile.cpp
src/common/audio/music/: music.cpp
src/common/audio/sound/: oalsound.cpp
src/common/console/: c_cvars.h
src/common/engine/: i_interface.cpp
src/common/objects/: autosegs.cpp  autosegs.h  dobject.h
src/common/platform/emscripten/: i_emsc_fs.cpp  i_emsc_input.cpp  i_emsc_specialpaths.cpp
src/common/rendering/: v_video.cpp
src/common/rendering/gles/: gles_hwtexture.cpp  gles_shader.cpp  (+3 more)
src/common/startscreen/: startscreen.cpp
src/common/statusbar/: base_sbar.cpp
src/common/utility/: configfile.cpp  configfile.h  m_alloc.cpp  tarray.h
src/g_statusbar/: hudmessages.cpp
src/gamedata/: g_mapinfo.h
src/scripting/: thingdef.h
tools-native/: ImportExecutables.cmake
tools/zipdir/: zipdir.py
wadsrc/static/: menudef.txt
wadsrc/static/zscript/: constants.zs  doombase.zs
web/: serve.py  shell.html  uzdoom-loader.js  uzdoom-melt.js
(+9 files in other folders)
